[ESQL] Allow multiple ROW source commands bumping tool version of antlr to 4.13.2