@@ -71,7 +71,7 @@ import org.elasticsearch.xpack.esql.plan.logical.MvExpand;
 import org.elasticsearch.xpack.esql.plan.logical.OrderBy;
 import org.elasticsearch.xpack.esql.plan.logical.Project;
 import org.elasticsearch.xpack.esql.plan.logical.Rename;
-import org.elasticsearch.xpack.esql.plan.logical.Row;
+import org.elasticsearch.xpack.esql.plan.logical.Rows;
 import org.elasticsearch.xpack.esql.plan.logical.TimeSeriesAggregate;
 import org.elasticsearch.xpack.esql.plan.logical.UnresolvedRelation;
 import org.elasticsearch.xpack.esql.plan.logical.fuse.Fuse;
@@ -136,18 +136,18 @@ import static org.hamcrest.Matchers.startsWith;
  */
 public class StatementParserTests extends AbstractStatementParserTests {
 
-    private static final LogicalPlan PROCESSING_CMD_INPUT = new Row(EMPTY, List.of(new Alias(EMPTY, "a", integer(1))));
+    private static final LogicalPlan PROCESSING_CMD_INPUT = Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "a", integer(1))));
 
     public void testRowCommand() {
         assertEqualsIgnoringIds(
-            new Row(EMPTY, List.of(new Alias(EMPTY, "a", integer(1)), new Alias(EMPTY, "b", integer(2)))),
+            Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "a", integer(1)), new Alias(EMPTY, "b", integer(2)))),
             query("row a = 1, b = 2")
         );
     }
 
     public void testRowCommandImplicitFieldName() {
         assertEqualsIgnoringIds(
-            new Row(
+            Rows.singleRow(
                 EMPTY,
                 List.of(new Alias(EMPTY, "1", integer(1)), new Alias(EMPTY, "2", integer(2)), new Alias(EMPTY, "c", integer(3)))
             ),
@@ -156,107 +156,107 @@ public class StatementParserTests extends AbstractStatementParserTests {
     }
 
     public void testRowCommandLong() {
-        assertEqualsIgnoringIds(new Row(EMPTY, List.of(new Alias(EMPTY, "c", literalLong(2147483648L)))), query("row c = 2147483648"));
+        assertEqualsIgnoringIds(Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "c", literalLong(2147483648L)))), query("row c = 2147483648"));
     }
 
     public void testRowCommandHugeInt() {
         assertEqualsIgnoringIds(
-            new Row(EMPTY, List.of(new Alias(EMPTY, "c", literalUnsignedLong("9223372036854775808")))),
+            Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "c", literalUnsignedLong("9223372036854775808")))),
             query("row c = 9223372036854775808")
         );
         assertEqualsIgnoringIds(
-            new Row(EMPTY, List.of(new Alias(EMPTY, "c", literalDouble(18446744073709551616.)))),
+            Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "c", literalDouble(18446744073709551616.)))),
             query("row c = 18446744073709551616")
         );
     }
 
     public void testRowCommandHugeNegativeInt() {
         assertEqualsIgnoringIds(
-            new Row(EMPTY, List.of(new Alias(EMPTY, "c", literalDouble(-92233720368547758080d)))),
+            Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "c", literalDouble(-92233720368547758080d)))),
             query("row c = -92233720368547758080")
         );
         assertEqualsIgnoringIds(
-            new Row(EMPTY, List.of(new Alias(EMPTY, "c", literalDouble(-18446744073709551616d)))),
+            Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "c", literalDouble(-18446744073709551616d)))),
             query("row c = -18446744073709551616")
         );
     }
 
     public void testRowCommandDouble() {
-        assertEqualsIgnoringIds(new Row(EMPTY, List.of(new Alias(EMPTY, "c", literalDouble(1.0)))), query("row c = 1.0"));
+        assertEqualsIgnoringIds(Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "c", literalDouble(1.0)))), query("row c = 1.0"));
     }
 
     public void testRowCommandMultivalueInt() {
-        assertEqualsIgnoringIds(new Row(EMPTY, List.of(new Alias(EMPTY, "c", integers(1, 2, -5)))), query("row c = [1, 2, -5]"));
+        assertEqualsIgnoringIds(Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "c", integers(1, 2, -5)))), query("row c = [1, 2, -5]"));
     }
 
     public void testRowCommandMultivalueLong() {
         assertEqualsIgnoringIds(
-            new Row(EMPTY, List.of(new Alias(EMPTY, "c", literalLongs(2147483648L, 2147483649L, -434366649L)))),
+            Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "c", literalLongs(2147483648L, 2147483649L, -434366649L)))),
             query("row c = [2147483648, 2147483649, -434366649]")
         );
     }
 
     public void testRowCommandMultivalueLongAndInt() {
         assertEqualsIgnoringIds(
-            new Row(EMPTY, List.of(new Alias(EMPTY, "c", literalLongs(2147483648L, 1L)))),
+            Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "c", literalLongs(2147483648L, 1L)))),
             query("row c = [2147483648, 1]")
         );
     }
 
     public void testRowCommandMultivalueHugeInts() {
         assertEqualsIgnoringIds(
-            new Row(EMPTY, List.of(new Alias(EMPTY, "c", literalDoubles(18446744073709551616., 18446744073709551617.)))),
+            Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "c", literalDoubles(18446744073709551616., 18446744073709551617.)))),
             query("row c = [18446744073709551616, 18446744073709551617]")
         );
         assertEqualsIgnoringIds(
-            new Row(EMPTY, List.of(new Alias(EMPTY, "c", literalUnsignedLongs("9223372036854775808", "9223372036854775809")))),
+            Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "c", literalUnsignedLongs("9223372036854775808", "9223372036854775809")))),
             query("row c = [9223372036854775808, 9223372036854775809]")
         );
     }
 
     public void testRowCommandMultivalueHugeIntAndNormalInt() {
         assertEqualsIgnoringIds(
-            new Row(EMPTY, List.of(new Alias(EMPTY, "c", literalDoubles(18446744073709551616., 1.0)))),
+            Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "c", literalDoubles(18446744073709551616., 1.0)))),
             query("row c = [18446744073709551616, 1]")
         );
         assertEqualsIgnoringIds(
-            new Row(EMPTY, List.of(new Alias(EMPTY, "c", literalUnsignedLongs("9223372036854775808", "1")))),
+            Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "c", literalUnsignedLongs("9223372036854775808", "1")))),
             query("row c = [9223372036854775808, 1]")
         );
     }
 
     public void testRowCommandMultivalueDouble() {
         assertEqualsIgnoringIds(
-            new Row(EMPTY, List.of(new Alias(EMPTY, "c", literalDoubles(1.0, 2.0, -3.4)))),
+            Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "c", literalDoubles(1.0, 2.0, -3.4)))),
             query("row c = [1.0, 2.0, -3.4]")
         );
     }
 
     public void testRowCommandBoolean() {
-        assertEqualsIgnoringIds(new Row(EMPTY, List.of(new Alias(EMPTY, "c", literalBoolean(false)))), query("row c = false"));
+        assertEqualsIgnoringIds(Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "c", literalBoolean(false)))), query("row c = false"));
     }
 
     public void testRowCommandMultivalueBoolean() {
         assertEqualsIgnoringIds(
-            new Row(EMPTY, List.of(new Alias(EMPTY, "c", literalBooleans(false, true)))),
+            Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "c", literalBooleans(false, true)))),
             query("row c = [false, true]")
         );
     }
 
     public void testRowCommandString() {
-        assertEqualsIgnoringIds(new Row(EMPTY, List.of(new Alias(EMPTY, "c", literalString("chicken")))), query("row c = \"chicken\""));
+        assertEqualsIgnoringIds(Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "c", literalString("chicken")))), query("row c = \"chicken\""));
     }
 
     public void testRowCommandMultivalueString() {
         assertEqualsIgnoringIds(
-            new Row(EMPTY, List.of(new Alias(EMPTY, "c", literalStrings("cat", "dog")))),
+            Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "c", literalStrings("cat", "dog")))),
             query("row c = [\"cat\", \"dog\"]")
         );
     }
 
     public void testRowCommandWithEscapedFieldName() {
         assertEqualsIgnoringIds(
-            new Row(
+            Rows.singleRow(
                 EMPTY,
                 List.of(
                     new Alias(EMPTY, "a.b.c", integer(1)),
@@ -270,7 +270,7 @@ public class StatementParserTests extends AbstractStatementParserTests {
 
     public void testCompositeCommand() {
         assertEqualsIgnoringIds(
-            new Filter(EMPTY, new Row(EMPTY, List.of(new Alias(EMPTY, "a", integer(1)))), TRUE),
+            new Filter(EMPTY, Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "a", integer(1)))), TRUE),
             query("row a = 1 | where true")
         );
     }
@@ -279,7 +279,7 @@ public class StatementParserTests extends AbstractStatementParserTests {
         assertEqualsIgnoringIds(
             new Filter(
                 EMPTY,
-                new Filter(EMPTY, new Filter(EMPTY, new Row(EMPTY, List.of(new Alias(EMPTY, "a", integer(1)))), TRUE), FALSE),
+                new Filter(EMPTY, new Filter(EMPTY, Rows.singleRow(EMPTY, List.of(new Alias(EMPTY, "a", integer(1)))), TRUE), FALSE),
                 TRUE
             ),
             query("row a = 1 | where true | where false | where true")
@@ -1495,55 +1495,55 @@ public class StatementParserTests extends AbstractStatementParserTests {
                 )
             )
         );
-        assertThat(stm, instanceOf(Row.class));
-        Row row = (Row) stm;
-        assertThat(row.fields().size(), is(8));
+        assertThat(stm, instanceOf(Rows.class));
+        Rows rows = (Rows) stm;
+        assertThat(rows.getFirst().fields().size(), is(8));
 
-        NamedExpression field = row.fields().get(0);
+        NamedExpression field = rows.getFirst().fields().get(0);
         assertThat(field.name(), is("x"));
         assertThat(field, instanceOf(Alias.class));
         Alias alias = (Alias) field;
         assertThat(alias.child().fold(FoldContext.small()), is(1));
 
-        field = row.fields().get(1);
+        field = rows.getFirst().fields().get(1);
         assertThat(field.name(), is("y"));
         assertThat(field, instanceOf(Alias.class));
         alias = (Alias) field;
         assertThat(alias.child().fold(FoldContext.small()), is(BytesRefs.toBytesRef("2")));
 
-        field = row.fields().get(2);
+        field = rows.getFirst().fields().get(2);
         assertThat(field.name(), is("a"));
         assertThat(field, instanceOf(Alias.class));
         alias = (Alias) field;
         assertThat(alias.child().fold(FoldContext.small()), is(BytesRefs.toBytesRef("2 days")));
 
-        field = row.fields().get(3);
+        field = rows.getFirst().fields().get(3);
         assertThat(field.name(), is("b"));
         assertThat(field, instanceOf(Alias.class));
         alias = (Alias) field;
         assertThat(alias.child().fold(FoldContext.small()), is(BytesRefs.toBytesRef("4 hours")));
 
-        field = row.fields().get(4);
+        field = rows.getFirst().fields().get(4);
         assertThat(field.name(), is("c"));
         assertThat(field, instanceOf(Alias.class));
         alias = (Alias) field;
         assertThat(alias.child().fold(FoldContext.small()).getClass(), is(BytesRef.class));
         assertThat(alias.child().fold(FoldContext.small()), is(BytesRefs.toBytesRef("1.2.3")));
 
-        field = row.fields().get(5);
+        field = rows.getFirst().fields().get(5);
         assertThat(field.name(), is("d"));
         assertThat(field, instanceOf(Alias.class));
         alias = (Alias) field;
         assertThat(alias.child().fold(FoldContext.small()).getClass(), is(BytesRef.class));
         assertThat(alias.child().fold(FoldContext.small()), is(BytesRefs.toBytesRef("127.0.0.1")));
 
-        field = row.fields().get(6);
+        field = rows.getFirst().fields().get(6);
         assertThat(field.name(), is("e"));
         assertThat(field, instanceOf(Alias.class));
         alias = (Alias) field;
         assertThat(alias.child().fold(FoldContext.small()), is(9));
 
-        field = row.fields().get(7);
+        field = rows.getFirst().fields().get(7);
         assertThat(field.name(), is("f"));
         assertThat(field, instanceOf(Alias.class));
         alias = (Alias) field;
@@ -1561,17 +1561,17 @@ public class StatementParserTests extends AbstractStatementParserTests {
 
     public void testNamedParams() {
         LogicalPlan stm = query("row x=?name1, y = ?name1", new QueryParams(List.of(paramAsConstant("name1", 1))));
-        assertThat(stm, instanceOf(Row.class));
-        Row row = (Row) stm;
-        assertThat(row.fields().size(), is(2));
+        assertThat(stm, instanceOf(Rows.class));
+        Rows rows = (Rows) stm;
+        assertThat(rows.getFirst().fields().size(), is(2));
 
-        NamedExpression field = row.fields().get(0);
+        NamedExpression field = rows.getFirst().fields().get(0);
         assertThat(field.name(), is("x"));
         assertThat(field, instanceOf(Alias.class));
         Alias alias = (Alias) field;
         assertThat(alias.child().fold(FoldContext.small()), is(1));
 
-        field = row.fields().get(1);
+        field = rows.getFirst().fields().get(1);
         assertThat(field.name(), is("y"));
         assertThat(field, instanceOf(Alias.class));
         alias = (Alias) field;
@@ -1616,17 +1616,17 @@ public class StatementParserTests extends AbstractStatementParserTests {
 
     public void testPositionalParams() {
         LogicalPlan stm = query("row x=?1, y=?1", new QueryParams(List.of(paramAsConstant(null, 1))));
-        assertThat(stm, instanceOf(Row.class));
-        Row row = (Row) stm;
-        assertThat(row.fields().size(), is(2));
+        assertThat(stm, instanceOf(Rows.class));
+        Rows rows = (Rows) stm;
+        assertThat(rows.getFirst().fields().size(), is(2));
 
-        NamedExpression field = row.fields().get(0);
+        NamedExpression field = rows.getFirst().fields().get(0);
         assertThat(field.name(), is("x"));
         assertThat(field, instanceOf(Alias.class));
         Alias alias = (Alias) field;
         assertThat(alias.child().fold(FoldContext.small()), is(1));
 
-        field = row.fields().get(1);
+        field = rows.getFirst().fields().get(1);
         assertThat(field.name(), is("y"));
         assertThat(field, instanceOf(Alias.class));
         alias = (Alias) field;
@@ -4239,10 +4239,10 @@ public class StatementParserTests extends AbstractStatementParserTests {
                     continue;
                 }
                 LogicalPlan plan = parser.parseQuery("ROW a = 1::" + nameOrAlias);
-                Row row = as(plan, Row.class);
-                assertThat(row.fields(), hasSize(1));
+                Rows rows = as(plan, Rows.class);
+                assertThat(rows.getFirst().fields(), hasSize(1));
                 org.elasticsearch.xpack.esql.core.expression.function.Function functionCall =
-                    (org.elasticsearch.xpack.esql.core.expression.function.Function) row.fields().get(0).child();
+                    (org.elasticsearch.xpack.esql.core.expression.function.Function) rows.getFirst().fields().get(0).child();
                 assertThat(functionCall.dataType(), equalTo(expectedType));
                 report.field(nameOrAlias, registry.snapshotRegistry().functionName(functionCall.getClass()).toLowerCase(Locale.ROOT));
             }
